playground/notas_tests/invalid/pos-04.hulk
type P() { m() => print(bad); }
new P().m();
